Update topic drafts

--- a/quix.yaml
+++ b/quix.yaml
@@ -146,7 +146,7 @@ topics:
       retentionInMinutes: -1
       retentionInBytes: 262144000
   - name: drafts
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
