--- a/quix.yaml
+++ b/quix.yaml
@@ -139,7 +139,7 @@ topics:
       retentionInMinutes: 60
       retentionInBytes: 52428800
   - name: drafts_sentiment
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
