--- a/quix.yaml
+++ b/quix.yaml
@@ -132,7 +132,7 @@ topics:
       retentionInMinutes: 60
       retentionInBytes: 52428800
   - name: messages
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
