--- a/quix.yaml
+++ b/quix.yaml
@@ -153,7 +153,7 @@ topics:
       retentionInMinutes: -1
       retentionInBytes: 262144000
   - name: sentiment_clean
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
