--- a/quix.yaml
+++ b/quix.yaml
@@ -42,7 +42,7 @@ deployments:
   - name: Sentiment analysis
     application: Sentiment analysis
     deploymentType: Service
-    version: d49be638a568e2d209ec50a8eb2c6e2efbcc1e0f
+    version: 7b069199f7306e9ee29587deb3aaef95bcf24274
     resources:
       cpu: 2000
       memory: 4000
@@ -59,6 +59,11 @@ deployments:
         description: This is the output for the Hugging Face model score
         required: true
         value: sentiment
+      - name: output_sanitized
+        inputType: OutputTopic
+        description: ''
+        required: false
+        value: sentiment_clean
   - name: Drafts sentiment analysis
     application: Drafts sentiment analysis
     deploymentType: Service
