--- a/Sentiment Demo UI/app.yaml
+++ b/Sentiment Demo UI/app.yaml
@@ -21,5 +21,10 @@ variables:
     description: ''
     defaultValue: drafts_sentiment
     required: false
+  - name: messages_sanitized
+    inputType: OutputTopic
+    description: ''
+    defaultValue: messages_sanitized
+    required: false
 dockerfile: src/build/dockerfile
 defaultFile: src/app/services/quix.service.ts
