--- a/quix.yaml
+++ b/quix.yaml
@@ -170,7 +170,7 @@ topics:
       retentionInMinutes: 60
       retentionInBytes: 52428800
   - name: messages_sanitized
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
