Update deployment Twitch Chat

--- a/quix.yaml
+++ b/quix.yaml
@@ -129,7 +129,7 @@ deployments:
       cpu: 2000
       memory: 1000
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: output
         inputType: OutputTopic
