--- a/quix.yaml
+++ b/quix.yaml
@@ -70,7 +70,7 @@ deployments:
     state:
       enabled: true
       size: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
