--- a/quix.yaml
+++ b/quix.yaml
@@ -17,7 +17,7 @@ deployments:
     publicAccess:
       enabled: true
       urlPrefix: sentimentdemoui
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: sentiment
         inputType: FreeText
