--- a/quix.yaml
+++ b/quix.yaml
@@ -169,7 +169,7 @@ topics:
       retentionInMinutes: -1
       retentionInBytes: 262144000
   - name: drafts
-    persisted: true
+    persisted: false
     configuration:
       partitions: 2
       replicationFactor: 2
