--- a/quix.yaml
+++ b/quix.yaml
@@ -126,11 +126,14 @@ deployments:
   - name: Sentiment Demo UI
     application: Sentiment Demo UI
     deploymentType: Service
-    version: fixHope
+    version: 5a2cac13d73487bace74ddb8dff7c9f2980077e1
     resources:
       cpu: 200
       memory: 500
       replicas: 1
+    publicAccess:
+      enabled: true
+      urlPrefix: sentimentdemoui-fixhope
     desiredStatus: Running
     variables:
       - name: sentiment
