--- a/Sentiment analysis/app.yaml
+++ b/Sentiment analysis/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: This is the output for the Hugging Face model score
     defaultValue: chat-with-sentiment
     required: true
+  - name: output2
+    inputType: InputTopic
+    description: ''
+    defaultValue: messages_sanitized
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: quix_function.py
