--- a/quix.yaml
+++ b/quix.yaml
@@ -17,7 +17,7 @@ deployments:
     state:
       enabled: true
       size: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: InputTopic
