--- a/quix.yaml
+++ b/quix.yaml
@@ -144,7 +144,7 @@ deployments:
       cpu: 400
       memory: 1000
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
