'Sentiment analysis/app.yaml' edited via Quix Portal

--- a/Sentiment analysis/app.yaml
+++ b/Sentiment analysis/app.yaml
@@ -16,6 +16,11 @@ variables:
     description: ''
     defaultValue: 0
     required: true
+  - name: output_sanitized
+    inputType: OutputTopic
+    description: ''
+    defaultValue: messages_sanitized
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: quix_function.py
