--- a/quix.yaml
+++ b/quix.yaml
@@ -9,7 +9,7 @@ deployments:
   - name: Chat Sentiment Analysis
     application: Sentiment analysis
     deploymentType: Service
-    version: sa-v2.0
+    version: AddingBannedWordsLogic
     resources:
       cpu: 500
       memory: 1000
@@ -31,6 +31,11 @@ deployments:
         description: ''
         required: true
         value: 0
+      - name: output_sanitized
+        inputType: OutputTopic
+        description: ''
+        required: false
+        value: messages_sanitized
   - name: Drafts Sentiment Analysis
     application: Drafts sentiment analysis
     deploymentType: Service
